--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ authors = ["Seweryn Czykinowski <sevveryn.czykinowski@gmail.com>"]
 [dependencies]
 chrono = "0.4.41"
 shlex = "1.3.0"
+enum_dispatch = "0.3.13"
