--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ authors = ["Seweryn Czykinowski <sevveryn.czykinowski@gmail.com>"]
 chrono = "0.4.41"
 shlex = "1.3.0"
 enum_dispatch = "0.3.13"
+log = "0.4.22"
+strum = "0.26.0"
+strum_macros = "0.26.0"
