refactor: make shell multi-threadable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "shelljougahara"
 description = "An interactive shell written in Rust, made to be used in a WASM environment."
-publish = false
+publish = true
 version = "0.1.0"
 edition = "2024"
 authors = ["Seweryn Czykinowski <sevveryn.czykinowski@gmail.com>"]
