--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "shelljougahara"
-description = "An interactive shell written in Rust, made to be used in a WASM environment."
+description = "A simulated shell written in Rust."
 publish = true
 version = "0.1.0"
 edition = "2024"
 authors = ["Seweryn Czykinowski <sevveryn.czykinowski@gmail.com>"]
+readme = "README.md"
+license = "MIT"
+repository = "https://github.com/sevnx/shelljougahara-rs"
 
 [dependencies]
 chrono = "0.4.41"
